<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_create_var"
            android:title="@string/create_variable" />
        <item
            android:id="@+id/nav_assign_var"
            android:title="@string/assign_variable" />
        <item
            android:id="@+id/nav_if"
            android:title="@string/if_condition"/>
        <item
            android:id="@+id/nav_while"
            android:title="@string/while_condition"/>
        <item
            android:id="@+id/nav_array"
            android:title="@string/array"/>
        <item
            android:id="@+id/nav_input"
            android:title="@string/input"/>
        <item
            android:id="@+id/nav_print"
            android:title="@string/print"/>
    </group>
</menu>