<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/create_var"
        android:orderInCategory="1"
        android:title="@string/create_variable"
        app:showAsAction="never"/>
    <item
        android:id="@+id/assign_var"
        android:orderInCategory="2"
        android:title="@string/assign_variable"
        app:showAsAction="never"/>
    <item
        android:id="@+id/if_block"
        android:orderInCategory="3"
        android:title="@string/if_condition"
        app:showAsAction="never"/>
    <item
        android:id="@+id/else_block"
        android:orderInCategory="4"
        android:title="@string/else_condition"
        app:showAsAction="never"/>
    <item
        android:id="@+id/while_block"
        android:orderInCategory="5"
        android:title="@string/while_condition"
        app:showAsAction="never"/>
    <item
        android:id="@+id/array_block"
        android:orderInCategory="6"
        android:title="@string/array"
        app:showAsAction="never"/>
    <item
        android:id="@+id/input_block"
        android:orderInCategory="6"
        android:title="@string/input"
        app:showAsAction="never"/>
    <item
        android:id="@+id/print_block"
        android:orderInCategory="8"
        android:title="@string/print"
        app:showAsAction="never"/>
</menu>