<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        tools:ignore="MissingConstraints">

        <ImageView
            android:layout_width="304dp"
            android:layout_height="88dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_if_start" />

        <EditText
            android:id="@+id/left_operand"
            android:layout_width="113dp"
            android:layout_height="39dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="177dp"
            android:layout_marginBottom="24dp"
            android:hint="@string/left_operand"
            android:textColor="#582909"
            android:textColorHint="#582909"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button_sign"
            android:layout_width="48dp"
            android:layout_height="35dp"
            android:layout_marginStart="128dp"
            android:layout_marginTop="27dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="24dp"
            android:background="#F3C4F1"
            android:text="@string/equal"
            android:textColor="#582909"
            android:textColorHint="#582909"
            android:textSize="25sp"
            tools:ignore="SmallSp"/>

        <EditText
            android:id="@+id/right_operand"
            android:layout_width="113dp"
            android:layout_height="39dp"
            android:layout_marginStart="182dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="24dp"
            android:hint="@string/right_operand"
            android:textColor="#582909"
            android:textColorHint="#582909"
            android:textSize="18sp" />

        <Button
            android:id="@+id/if_plus_command"
            android:layout_width="44dp"
            android:layout_height="35dp"
            android:text="@string/Plus" />
    </RelativeLayout>

</merge>