<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.065"
        tools:ignore="MissingConstraints">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp">

            <Button
                android:id="@+id/createVariable"
                android:layout_width="120dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:text="@string/create_variable_n"
                android:background="@drawable/create_bg"/>

            <Button
                android:id="@+id/assignVariable"
                android:layout_width="121dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:text="@string/assign_variable_n"
                android:background="@drawable/assign_bg"/>

            <Button
                android:id="@+id/button12"
                android:layout_width="121dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:text="@string/Plus" />
        </TableRow>
    </TableLayout>


</androidx.constraintlayout.widget.ConstraintLayout>