<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:id="@+id/ass_var_block"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_array" />

        <EditText
            android:id="@+id/arrayName"
            android:layout_width="96dp"
            android:layout_height="39dp"
            android:layout_marginStart="7dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="177dp"
            android:layout_marginBottom="24dp"
            android:hint="@string/name"
            android:textColor="#582909"
            android:textColorHint="#582909"
            android:textSize="18sp" />


        <EditText
            android:id="@+id/size"
            android:layout_width="50dp"
            android:layout_height="39dp"
            android:layout_marginStart="110dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="24dp"
            android:hint="@string/size"
            android:textColor="#582909"
            android:textColorHint="#582909"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/arrayValue"
            android:layout_width="150dp"
            android:layout_height="39dp"
            android:layout_marginStart="169dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="24dp"
            android:hint="@string/value"
            android:textColor="#582909"
            android:textColorHint="#582909"
            android:textSize="18sp" />

        <Button
            android:id="@+id/delete"
            android:layout_width="27dp"
            android:layout_height="68dp"
            android:layout_marginStart="330dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="24dp"
            android:background="@null"
            android:rotation="-90"
            android:textColor="#582909"
            android:textColorHint="#582909"
            android:textSize="18sp" />

    </RelativeLayout>

</merge>