<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dip">

    <RelativeLayout
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:background="@drawable/layout_bg"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/variable1"
            android:layout_width="71dp"
            android:layout_height="35dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="14dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="36dp"
            android:layout_marginBottom="7dp"
            android:layout_toStartOf="@+id/variable2"
            android:background="@drawable/text_bg"
            android:hint="@string/variable" />

        <TextView
            android:id="@+id/equal"
            android:layout_width="38dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="-1dp"
            android:layout_toStartOf="@+id/variable2"
            android:gravity="center"
            android:text="@string/equal"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/variable2"
            android:layout_width="94dp"
            android:layout_height="36dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="45dp"
            android:layout_marginBottom="7dp"
            android:background="@drawable/text_bg"
            android:hint="@string/value" />

        <Button
            android:id="@+id/toggle"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="1dp"
            android:background="@drawable/layout_bg"
            android:checked="false"
            android:paddingEnd="10dip"
            android:text="@string/OK"
            tools:ignore="RtlSymmetry" />

        <!--   <TextView
               android:id="@+id/text_view"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_alignParentLeft="true"
               android:layout_centerVertical="true"
               android:layout_gravity="center_vertical"
               android:layout_toLeftOf="@+id/toggle"
               android:paddingLeft="10dip"
               android:textSize="18sp"
               android:textStyle="bold" />-->

    </RelativeLayout>
    <!--
    <EditText
        android:layout_width="match_parent"
        android:layout_height="100dip"
        android:id="@+id/edit_text"
        android:visibility="gone"
        android:gravity="left|top"
        android:layout_margin="8dip"
        android:inputType="textMultiLine"/>-->


</merge>