<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="233dp"
        android:layout_height="70dp"
        android:layout_margin="10dp"
        android:background="@drawable/assign_bg"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/variable1"
            android:layout_width="81dp"
            android:layout_height="32dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="11dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/text_bg"
            android:gravity="center"
            android:hint="@string/variable" />

        <TextView
            android:id="@+id/equal"
            android:layout_width="53dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="-14dp"
            android:layout_marginBottom="6dp"
            android:layout_toStartOf="@+id/variable2"
            android:layout_toEndOf="@+id/variable1"
            android:gravity="center"
            android:text="@string/equal"
            android:textSize="30sp"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/variable2"
            android:layout_width="94dp"
            android:layout_height="36dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="14dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="7dp"
            android:background="@drawable/text_bg"
            android:gravity="center"
            android:hint="@string/value" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="6dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="6dp"
            android:layout_marginBottom="6dp"
            android:text="@string/assign_variable"
            android:textColor="@color/black"/>


        <!--   <TextView
               android:id="@+id/text_view"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_alignParentLeft="true"
               android:layout_centerVertical="true"
               android:layout_gravity="center_vertical"
               android:layout_toLeftOf="@+id/toggle"
               android:paddingLeft="10dip"
               android:textSize="18sp"
               android:textStyle="bold" />-->

    </RelativeLayout>

    <!--
    <EditText
        android:layout_width="match_parent"
        android:layout_height="100dip"
        android:id="@+id/edit_text"
        android:visibility="gone"
        android:gravity="left|top"
        android:layout_margin="8dip"
        android:inputType="textMultiLine"/>-->


</merge>